@@ -1,8 +1,8 @@
-/* $Id: TodayFixes,v 1.89 2004/06/20 18:50:50 sisoft Exp $ */
+/* $Id: TodayFixes,v 1.90 2004/06/20 21:30:21 sisoft Exp $ */
 ---
-perl: fix error, if 'perlfile' undefined or not exist.
+fix pasring solid expressions.
 .
 previous:
 ---
-fix timeouts.
+perl: fix error, if 'perlfile' undefined or not exist.
 .
