@@ -1,1 +1,1 @@
-char cvsdate[]="2004-06-20 22:47";
+char cvsdate[]="2004-06-21 01:28";
